@@ -10,6 +10,11 @@ acct_mgr-0.4 (not yet released) - branch 0.11
  * #8990: HtPasswdStore and SessionStore with HtPasswdHashMethod share option
    by adding dedicated options 'db_htpasswd_hash_type' and 'db_htdigest_realm'
 
+ new features
+ * add recursion to option parser for configuration admin page and provide
+   available valid values for an `ExtensionOption` like `IPasswordHashMethod`
+   by a select field (dropdown box) - or meaningful message on missing options
+
 
 acct_mgr-0.3.1 (13-Jul-2011) - branch 0.11
  resolved issues
